HW0 แก้ชื่อเป็นภาษาไทย

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM6XidHDVYkK2hX+XJH8vm8",
+      "authorship_tag": "ABX9TyNoLoM6lldlMb2VrKwWZN9N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,9 +59,9 @@
         "outputId": "86b5c443-5630-443a-89b9-39ea17988f8c"
       },
       "source": [
-        "print('aaa inn id45232423')"
+        "print('สุรีรัตน์ สลางสิงห์ id45232423')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
