--- a/Data101.ipynb
+++ b/Data101.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Data101.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqOhcu1E4nfHA7xFxlEeFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +43,7 @@
       "source": [
         "import pandas"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -57,7 +56,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,7 +74,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +99,7 @@
       "source": [
         "import os "
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +112,7 @@
       "source": [
         "path = '/content/drive/My Drive/DWDM_material'"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +129,7 @@
       "source": [
         "os.listdir(path)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +155,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -174,7 +173,7 @@
         "file_path = os.path.join(path,'test.csv')\n",
         "print (file_path)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +198,7 @@
       "source": [
         "pd.read_csv(file_path)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,6 +324,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4bgUPOQpqeF-",
+        "colab_type": "text"
+      },
+      "source": [
+        "ตั้งชื่อเพื่อสะดวกในการคีย์ข้อมูลในครั้งต่อไป"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "7q-TwxCUh1zj",
@@ -334,7 +343,7 @@
       "source": [
         "table1 = pd.read_csv(file_path)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,7 +360,7 @@
       "source": [
         "table1"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -477,6 +486,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CH3xnezOqUVy",
+        "colab_type": "text"
+      },
+      "source": [
+        "นำข้อมูลจากตารางมาพล็อตบนกราฟตามแกน x และ y"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IEuvl7jUkHuE",
@@ -486,7 +505,7 @@
       "source": [
         "from matplotlib import pyplot as plt"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -503,7 +522,7 @@
       "source": [
         "plt.scatter(table1['x'],table1['y'])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
