Add list slicing without comments

--- a/Data101.ipynb
+++ b/Data101.ipynb
@@ -43,7 +43,7 @@
       "source": [
         "import pandas"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -56,7 +56,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,7 +99,7 @@
       "source": [
         "import os "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -112,7 +112,7 @@
       "source": [
         "path = '/content/drive/My Drive/DWDM_material'"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "source": [
         "os.listdir(path)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
         "file_path = os.path.join(path,'test.csv')\n",
         "print (file_path)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +198,7 @@
       "source": [
         "pd.read_csv(file_path)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -343,7 +343,7 @@
       "source": [
         "table1 = pd.read_csv(file_path)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
       "source": [
         "table1"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -505,7 +505,7 @@
       "source": [
         "from matplotlib import pyplot as plt"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,7 +522,7 @@
       "source": [
         "plt.scatter(table1['x'],table1['y'])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -572,7 +572,7 @@
         "a=1\n",
         "b=3"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +585,7 @@
       "source": [
         "c=a+b"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -602,7 +602,7 @@
       "source": [
         "c"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,7 +628,7 @@
       "source": [
         "name = 'a'"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +645,7 @@
       "source": [
         "name"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
       "source": [
         "one = '1'"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +691,7 @@
       "source": [
         "one"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -724,7 +724,7 @@
       "source": [
         "a+one"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -753,7 +753,7 @@
       "source": [
         "a + int(one)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -779,7 +779,7 @@
       "source": [
         "num = '112.76'"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -796,7 +796,7 @@
       "source": [
         "int(num)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -825,7 +825,7 @@
       "source": [
         "float(num)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
       "source": [
         "str(float(num))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -884,7 +884,7 @@
       "source": [
         "num2 = '112.76887'"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -901,7 +901,7 @@
       "source": [
         "int(float(num2))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +937,7 @@
       "source": [
         "list_a=[1,3,7,19]"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -954,7 +954,7 @@
       "source": [
         "list_a[0]"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +984,7 @@
       "source": [
         "list_a[-1]"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1014,7 +1014,7 @@
       "source": [
         "len(list_a)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1044,7 +1044,7 @@
       "source": [
         "len(list_a)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1070,7 +1070,7 @@
       "source": [
         "list_b=[1,4,'thai',['a',3,9]]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1087,7 +1087,7 @@
       "source": [
         "list_b[-1][0]"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1121,7 +1121,7 @@
         "list_c = list_a+list_b\n",
         "list_c"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1157,7 +1157,7 @@
       "source": [
         "list_a1=[]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1180,7 +1180,7 @@
       "source": [
         "list_a2 = list()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1198,7 +1198,7 @@
         "list_a1.append(666)\n",
         "list_a1"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1230,7 +1230,7 @@
         "list_c.append(1234)\n",
         "print(list_c)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1262,7 @@
       "source": [
         "word_a = 'statistics KKU'"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1279,7 +1279,7 @@
       "source": [
         "word_a[-1]"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1312,7 +1312,7 @@
       "source": [
         "word_a + ' Thailand'"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1345,7 +1345,7 @@
       "source": [
         "len(word_a)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1375,7 +1375,7 @@
       "source": [
         "f'list_c=(list_c)'"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1408,7 +1408,7 @@
       "source": [
         "f'modulo example -> 4 mod 3 = {4%3} '"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1442,7 +1442,7 @@
         "st_x = f'list_c = {list_c}'\n",
         "st_x"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1476,7 @@
         "print(st_x)\n",
         "st_x.split()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1526,7 +1526,7 @@
         "print(st_x)\n",
         "st_x.split(',')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1574,7 +1574,7 @@
         "print(st_x)\n",
         "st_x.split(',   ')"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1623,7 @@
         "  print(f'first line {i} ')\n",
         "  print(f'second line {2*i}')"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1656,7 @@
         "for i in [1,2,3,4]:\n",
         "  print('HaHaHa')"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1685,7 +1685,7 @@
         "for x in list_a:\n",
         "  print(x)"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1713,7 +1713,7 @@
       "source": [
         "range(6)"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1744,7 +1744,7 @@
         "for i in range(6):\n",
         "  print(i)"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1778,7 +1778,7 @@
         "        print(f'i={i} , j={j} -> ixj = {i*j}')\n",
         "   print('end inner')"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1825,7 +1825,7 @@
         "if len(stringX) > 100:\n",
         "  print('stringX is longer than 6')"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1846,7 +1846,7 @@
         "else:\n",
         "    print('XXX')"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1877,7 +1877,7 @@
         "else:\n",
         "    print('XXX')"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1923,7 +1923,7 @@
         "    print (f'{i}<{MAXIMUM} NOT UPDATE!, now maximum is {MAXIMUM}')\n",
         "print(f'ANSWER is {MAXIMUM} is the maximum number of {list_EX}')"
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1949,6 +1949,40 @@
         "#HW\n",
         "\n",
         "เรียงลำดับค่าใน list_EX = [-4,-1,-9,8,11] จากค่ามากที่สุดไปน้อยที่สุดโดยไม่ใช้function sort()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lI_C-2rz2-vz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "16beed8d-374f-460e-e61b-4a4b48577a71"
+      },
+      "source": [
+        "list_EX = [-4, -1, -9, 8, 11]\n",
+        "size_list_EX = len(list_EX)\n",
+        "sizeL = size_list_EX - 1 \n",
+        "for box in range(size_list_EX) :\n",
+        "    for i in range(sizeL) :\n",
+        "      if list_EX[i] < list_EX[i+1] :\n",
+        "          temp = list_EX[i] \n",
+        "          list_EX[i] = list_EX[i+1]\n",
+        "          list_EX[i+1] = temp\n",
+        "print(list_EX)\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[11, 8, -1, -4, -9]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1982,7 +2016,7 @@
         "  return MAXIMUM\n",
         "\n"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1999,7 +2033,7 @@
       "source": [
         "find_max([12,1666,912312,-2,77])"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
