Outlier no comments

--- a/Pandas_101.ipynb
+++ b/Pandas_101.ipynb
@@ -2751,36 +2751,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "zq3SNhgjDJXW",
-        "outputId": "eedc24a6-3f00-44de-bf81-7da57ee659d2",
+        "outputId": "d99cd41a-4075-4b6e-9883-cf4ce3376852",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 401
+          "height": 265
         }
       },
       "source": [
-        "plt.boxplot(all_no_missing['avg_price'],vert=False)"
+        "ret=plt.boxplot(all_no_missing['avg_price'],vert=False)\n"
       ],
-      "execution_count": 50,
+      "execution_count": 52,
       "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'boxes': [<matplotlib.lines.Line2D at 0x7fb71d5332e8>],\n",
-              " 'caps': [<matplotlib.lines.Line2D at 0x7fb71d533cf8>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fb71d52e0b8>],\n",
-              " 'fliers': [<matplotlib.lines.Line2D at 0x7fb71d52e7b8>],\n",
-              " 'means': [],\n",
-              " 'medians': [<matplotlib.lines.Line2D at 0x7fb71d52e438>],\n",
-              " 'whiskers': [<matplotlib.lines.Line2D at 0x7fb71d5335f8>,\n",
-              "  <matplotlib.lines.Line2D at 0x7fb71d533978>]}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 50
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -2799,7 +2780,174 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2l9uOYKbDLnj"
+        "id": "2l9uOYKbDLnj",
+        "outputId": "0f6d2829-4ef5-40aa-8296-bc6c40b00266",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "print(ret['whiskers'][0].get_xdata()[1])\n",
+        "print(ret['whiskers'][1].get_xdata()[1])"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "138.1578947368421\n",
+            "549.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UVE1u5m3GP6f",
+        "outputId": "55b8aca0-947f-46a6-d7b4-533de935a71c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        }
+      },
+      "source": [
+        "nooutlier_nomissing = all_no_missing[all_no_missing['avg_price']>=ret['whiskers'][0].get_xdata()[1]]\n",
+        "nooutlier_nomissing = nooutlier_nomissing[nooutlier_nomissing['avg_price']<=ret['whiskers'][1].get_xdata()[1]]\n",
+        "nooutlier_nomissing\n",
+        "\n"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>name</th>\n",
+              "      <th>city_name</th>\n",
+              "      <th>avg_price</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>81919</th>\n",
+              "      <td>กล้วยน้ำว้า เขาหลัก</td>\n",
+              "      <td>Niedersachsen</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>206740</th>\n",
+              "      <td>Orohotel</td>\n",
+              "      <td>Basilicata</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>46171</th>\n",
+              "      <td>YKKO Mawlamyine</td>\n",
+              "      <td>Mon State</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>95286</th>\n",
+              "      <td>Ngui Lian Two (งุยเลียนทู)</td>\n",
+              "      <td>Mon State</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>157052</th>\n",
+              "      <td>Ngwe Moe Hotel</td>\n",
+              "      <td>Mon State</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>219158</th>\n",
+              "      <td>Oc Nong Ha Trang ( Old Quater Hanoi)</td>\n",
+              "      <td>Hà Nội</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>219517</th>\n",
+              "      <td>Minh Anh Restaurant</td>\n",
+              "      <td>Hà Nội</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>234826</th>\n",
+              "      <td>Lackah At Crowne Plaza West Hanoi</td>\n",
+              "      <td>Hà Nội</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>237201</th>\n",
+              "      <td>Candle Hotel Hanoi</td>\n",
+              "      <td>Hà Nội</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>246607</th>\n",
+              "      <td>Xingcha</td>\n",
+              "      <td>Hà Nội</td>\n",
+              "      <td>327.447288</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>243843 rows × 3 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                        name      city_name   avg_price\n",
+              "81919                    กล้วยน้ำว้า เขาหลัก  Niedersachsen  327.447288\n",
+              "206740                              Orohotel     Basilicata  327.447288\n",
+              "46171                        YKKO Mawlamyine      Mon State  327.447288\n",
+              "95286             Ngui Lian Two (งุยเลียนทู)      Mon State  327.447288\n",
+              "157052                        Ngwe Moe Hotel      Mon State  327.447288\n",
+              "...                                      ...            ...         ...\n",
+              "219158  Oc Nong Ha Trang ( Old Quater Hanoi)         Hà Nội  327.447288\n",
+              "219517                   Minh Anh Restaurant         Hà Nội  327.447288\n",
+              "234826     Lackah At Crowne Plaza West Hanoi         Hà Nội  327.447288\n",
+              "237201                    Candle Hotel Hanoi         Hà Nội  327.447288\n",
+              "246607                               Xingcha         Hà Nội  327.447288\n",
+              "\n",
+              "[243843 rows x 3 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IX7RRJNLImsO"
       },
       "source": [
         ""
