--- a/Association_Rules.ipynb
+++ b/Association_Rules.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Association Rules.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNj05PbuYd/0y4gh+BymVlT",
+      "authorship_tag": "ABX9TyNGSl9Y0suHT/6OuJqs9yAY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -48,7 +48,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "A4_BVFc-6INn",
-        "outputId": "9b34988e-0f45-4d1e-a43b-1609d606deb1",
+        "outputId": "24ff4f2b-c983-454f-8a25-dfff3c1b5648",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -59,7 +59,7 @@
         "\n",
         "path = '/content/drive/My Drive/DWDM_material'"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -74,7 +74,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "eplvWFZQ6P4i",
-        "outputId": "b4da2806-c6e1-402d-9056-5bd3ea4ceb1f",
+        "outputId": "90451a56-a7e5-4eba-8761-e21335a98560",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
@@ -85,7 +85,7 @@
         "data = pd.read_csv(os.path.join(path,'reduced_marketbasket.csv'),encoding='latin1')\n",
         "data"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -283,7 +283,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "7EubYidf6Yzh",
-        "outputId": "d206aee2-92e4-4e6a-c86a-095b1c414f2b",
+        "outputId": "5fbdf6a0-7855-4d0f-dba4-df2490272166",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -292,7 +292,7 @@
       "source": [
         "data.groupby('Country').sum().sort_values('Quantity')"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,7 +606,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -614,7 +614,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8poVJmFu6fPx",
-        "outputId": "bc38e745-17ea-49e8-f2ac-4fb47c0b593f",
+        "outputId": "91b1ce66-99c3-4334-e91c-cb119e9dc9a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 450
@@ -623,7 +623,7 @@
       "source": [
         "data.groupby('InvoiceNo').sum()"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -759,7 +759,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "OJKCEdJp6i0Z",
-        "outputId": "5adbab51-00c3-4382-a7fa-c865128b04ae",
+        "outputId": "c88ccd82-20bc-425b-9e35-56db4237dc87",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -768,7 +768,7 @@
         "transacs = data.groupby('InvoiceNo')['StockCode'].apply(list)\n",
         "transacs"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,7 +792,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -810,7 +810,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "xfIMFK6G6lL7",
-        "outputId": "75e1b2a3-029c-44ca-8abd-c78e30f35735",
+        "outputId": "11410723-e1b0-4c3a-d43b-5038e11013bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -818,7 +818,7 @@
       "source": [
         "!pip install apyori"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
             "  Downloading https://files.pythonhosted.org/packages/5e/62/5ffde5c473ea4b033490617ec5caa80d59804875ad3c3c57c0976533a21a/apyori-1.1.2.tar.gz\n",
             "Building wheels for collected packages: apyori\n",
             "  Building wheel for apyori (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for apyori: filename=apyori-1.1.2-cp36-none-any.whl size=5975 sha256=18b778f1970137be430822b0aa1282963794c45e75eaa8f1d1f1f53388a237e1\n",
+            "  Created wheel for apyori: filename=apyori-1.1.2-cp36-none-any.whl size=5975 sha256=41c0fd118281a50d6e401c4c3e4abf372c49ba08e546f8b491dd9b2441eb53b5\n",
             "  Stored in directory: /root/.cache/pip/wheels/5d/92/bb/474bbadbc8c0062b9eb168f69982a0443263f8ab1711a8cad0\n",
             "Successfully built apyori\n",
             "Installing collected packages: apyori\n",
@@ -845,7 +845,7 @@
       "source": [
         "from apyori import apriori"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -856,14 +856,14 @@
       "source": [
         "out = list(apriori(transacs, min_support = 0.03, min_confidence = 0.1))"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FQGF3Fp86y6D",
-        "outputId": "9ca4c178-2dc6-432d-915a-bb568dc25b7e",
+        "outputId": "496cc664-46ca-43ac-8abc-4ac8761b55fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -871,7 +871,7 @@
       "source": [
         "out[0]"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,7 +883,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -908,7 +908,88 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "biyFFvLf61Cy"
+        "id": "biyFFvLf61Cy",
+        "outputId": "7673a6c8-7178-4e3b-9c95-7f6fd3652f03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Customer = data.groupby('CustomerID')['StockCode'].apply(list)\n",
+        "Customer"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CustomerID\n",
+              "12346.0                                       [23166, 23166]\n",
+              "12347.0    [85116, 22375, 71477, 22492, 22771, 22772, 227...\n",
+              "12348.0    [84992, 22951, 84991, 84991, 21213, 21213, 226...\n",
+              "12349.0    [23112, 23460, 21564, 21411, 21563, 22131, 221...\n",
+              "12350.0    [21908, 22412, 79066K, 79191C, 22348, 84086C, ...\n",
+              "                                 ...                        \n",
+              "18280.0    [82484, 22180, 22467, 22725, 22727, 22495, 223...\n",
+              "18281.0    [22037, 22716, 22028, 23007, 23008, 23209, 22467]\n",
+              "18282.0    [21270, 23187, 23295, 22089, 21108, 21109, 224...\n",
+              "18283.0    [22356, 20726, 22384, 22386, 20717, 20718, 850...\n",
+              "18287.0    [22755, 22754, 22753, 22756, 22758, 22757, 227...\n",
+              "Name: StockCode, Length: 4372, dtype: object"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n_Mqg9qTE1cB",
+        "outputId": "62dd382d-7742-4d3f-feba-4306c132c69f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list(apriori(Customer, min_support = 0.07 , min_confidence = 0.7 ))"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[RelationRecord(items=frozenset({'21733', '85123A'}), support=0.07136322049405307, ordered_statistics=[OrderedStatistic(items_base=frozenset({'21733'}), items_add=frozenset({'85123A'}), confidence=0.8103896103896104, lift=4.129397874852421)]),\n",
+              " RelationRecord(items=frozenset({'22699', '22423'}), support=0.07410795974382434, ordered_statistics=[OrderedStatistic(items_base=frozenset({'22699'}), items_add=frozenset({'22423'}), confidence=0.7587822014051523, lift=3.740017795426523)]),\n",
+              " RelationRecord(items=frozenset({'22697', '22699'}), support=0.07410795974382434, ordered_statistics=[OrderedStatistic(items_base=frozenset({'22697'}), items_add=frozenset({'22699'}), confidence=0.8307692307692307, lift=8.506143037290578), OrderedStatistic(items_base=frozenset({'22699'}), items_add=frozenset({'22697'}), confidence=0.7587822014051523, lift=8.506143037290578)])]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AkDce4kjFdmo"
+      },
+      "source": [
+        "ลูกค้ามักจะซื้อรหัสสินค้า22697 คู่กับ22699 เท่ากับ83% โดยมีค่าliftเท่ากับ8.50 ซึ่งมีค่ามากกว่าสินค้าคู่อื่น \n",
+        "ลูกค้ามักจะซื้อรหัสสินค้า21733 คู่กับ85123A เท่ากับ81% โดยมีค่าliftเท่ากับ4.12ซึ่งมีค่ามากรองลงมาจากคู่แรก"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dBvNOCQqFU_Y"
       },
       "source": [
         ""
